[this binary only]igt@kms_joiner@basic-force-ultra-joiner@single - fail - Test assertion failure function do_display_commit, Failed assertion: ret == 0, error: -22 != 0
separated from #3105
Stdout
Using IGT_SRANDOM=1730868122 for randomisation
Opened device: /dev/dri/card0
Found master pipe A
Found master pipe B
Found master pipe C
Starting subtest: basic-force-ultra-joiner
Starting dynamic subtest: single
Connector DP-1/i915_joiner_force_enable is now 4
Connector DP-3/i915_joiner_force_enable is now 4
Stack trace:
#0 ../lib/igt_core.c:2051 __igt_fail_assert()
#1 ../lib/igt_kms.c:3754 do_display_commit()
#2 ../lib/igt_kms.c:4709 igt_display_commit2()
#3 ../tests/intel/kms_joiner.c:375 test_ultra_joiner()
#4 ../tests/intel/kms_joiner.c:591 __igt_unique____real_main412()
#5 ../tests/intel/kms_joiner.c:412 main()
#6 [__libc_init_first+0x8a]
#7 [__libc_start_main+0x8b]
#8 [_start+0x25]
Dynamic subtest single: FAIL (0.288s)
Subtest basic-force-ultra-joiner: FAIL (0.288s)
Stderr
Starting subtest: basic-force-ultra-joiner
Starting dynamic subtest: single
(kms_joiner:6727) igt_kms-CRITICAL: Test assertion failure function do_display_commit, file ../lib/igt_kms.c:4603:
(kms_joiner:6727) igt_kms-CRITICAL: Failed assertion: ret == 0
(kms_joiner:6727) igt_kms-CRITICAL: Last errno: 22, Invalid argument
(kms_joiner:6727) igt_kms-CRITICAL: error: -22 != 0
Dynamic subtest single failed.
**** DEBUG ****
(kms_joiner:6727) igt_kms-DEBUG: plane C.4: Setting property "FB_ID" to 0x0/0
(kms_joiner:6727) igt_kms-DEBUG: plane C.4: Setting property "CRTC_ID" to 0x0/0
(kms_joiner:6727) igt_kms-DEBUG: plane C.4: Setting property "rotation" to 0x1/1
(kms_joiner:6727) igt_kms-DEBUG: plane C.4: Setting property "COLOR_ENCODING" to 0x0/0
(kms_joiner:6727) igt_kms-DEBUG: plane C.4: Setting property "COLOR_RANGE" to 0x0/0
(kms_joiner:6727) igt_kms-DEBUG: plane C.4: Setting property "pixel blend mode" to 0x0/0
(kms_joiner:6727) igt_kms-DEBUG: plane C.4: Setting property "alpha" to 0xffff/65535
(kms_joiner:6727) igt_kms-DEBUG: plane C.4: Setting property "FB_DAMAGE_CLIPS" to 0x0/0
(kms_joiner:6727) igt_kms-DEBUG: plane C.4: Setting property "SCALING_FILTER" to 0x0/0
(kms_joiner:6727) igt_kms-DEBUG: display: populating plane data: C.5, fb 0
(kms_joiner:6727) igt_kms-DEBUG: plane C.5: Setting property "SRC_X" to 0x0/0
(kms_joiner:6727) igt_kms-DEBUG: plane C.5: Setting property "SRC_Y" to 0x0/0
(kms_joiner:6727) igt_kms-DEBUG: plane C.5: Setting property "SRC_W" to 0x0/0
(kms_joiner:6727) igt_kms-DEBUG: plane C.5: Setting property "SRC_H" to 0x0/0
(kms_joiner:6727) igt_kms-DEBUG: plane C.5: Setting property "CRTC_X" to 0x0/0
(kms_joiner:6727) igt_kms-DEBUG: plane C.5: Setting property "CRTC_Y" to 0x0/0
(kms_joiner:6727) igt_kms-DEBUG: plane C.5: Setting property "CRTC_W" to 0x0/0
(kms_joiner:6727) igt_kms-DEBUG: plane C.5: Setting property "CRTC_H" to 0x0/0
(kms_joiner:6727) igt_kms-DEBUG: plane C.5: Setting property "FB_ID" to 0x0/0
Edited by Adela Rybak